# baresip-studio

./: README.md  build.gradle
app/: build.gradle
app/src/main/assets/: accounts  config  contacts
app/src/main/cpp/: CMakeLists.txt  baresip.c
app/src/main/kotlin/com/tutpro/baresip/: EditContactsActivity.kt  HistoryActivity.kt  MainActivity.kt
distribution/: .gitignore  Makefile
gradle/wrapper/: gradle-wrapper.properties
